myapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-openshift
    app.kubernetes.io/component: hello-openshift
    app.kubernetes.io/instance: hello-openshift
  name: hello-openshift
  namespace: hello-openshift
spec:
  ports:
  - name: port-1
    port: 8888
    protocol: TCP
    targetPort: 8888
  - name: port-2
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deployment: hello-openshift
  sessionAffinity: None
  type: ClusterIP
