myapp/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: hello-openshift
    app.kubernetes.io/component: hello-openshift
    app.kubernetes.io/instance: hello-openshift
  name: hello-openshift
  namespace: hello-openshift
spec:
  port:
    targetPort: port-1
  to:
    kind: Service
    name: hello-openshift
    weight: 100
  wildcardPolicy: None
